src/scss/home.scss
@import "constants";
@import "mixins";
@import "~slick-carousel/slick/slick";


.shop-notice {
  width: 100%;
  background: #000;
  padding: .3rem .75rem .5rem;
  text-align: center;
  border-top: 1px solid #2c2c2d;

  a {
    color: #fff;
    font-size: 1.3rem;
    text-decoration: none;
  }
}


// HOME 
#home-grid {
  width: 100%;
  height: $home_banner_size;
}


.home-info{
  position: absolute;
  top: 30%;
  left: 10%;

  @media (max-width:1280px){
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    display: flex;
    justify-content: end;
    align-items: center;
    flex-direction: column;
    padding-bottom: 50px;
  }
}

.home-grid__prev{
  padding: 0px 30px;
  position: absolute;
  left: 0;
  top: 50%;
  background-color: transparent;
  border: none;
  margin: 0;
  border: none;
  cursor: pointer;
  z-index: 99;
}

.home-grid__next{
  padding: 0px 30px;
  position: absolute;
  right: 0;
  top: 50%;
  background-color: transparent;
  border: none;
  margin: 0;
  border: none;
  cursor: pointer;
  z-index: 99;

}

.home-grid__arrow__img{
  width: 30px;
  fill: white;
}

.home-title{
  font-size: 2.2rem;
  font-weight: 500;
  margin-bottom: 0.3rem;
  text-align: start;
  color: white;
  // display: none;

  @media (max-width: 1280px) {
    font-size: 2rem;
  }

  @media (max-width: 640px) {
    font-size: 1.8rem;
    text-align: center;
    display: none;
  }
}

.home-title--bold{
  font-weight: 900;

  @media (max-width: 640px) {
    font-size: 1.2rem;
    text-align: center;
    display: block;
  }
}

.home-grid__picture{
  height: $home_banner_size!important;
  width: 100%;
  object-fit: cover;
  filter: brightness(0.4)
}

.home-title__button{
  display: block;
  // @include btn(#000, #ededed, #ddd);
  margin-top: 2rem;
  background-color: transparent;
  color: white;
  border: 4px solid white;
  padding: 10px 20px;
  font-size: 1.5rem;
  font-weight: 700;
  text-decoration: none;
  text-align: center;
  width: 50%;
  // width: 100%;
  z-index: 1000;
  @media (max-width: 1280px) {
    margin-top: 1rem;
    width: 100%;

  }
}

.home-title__button:hover{
  background-color: white;
  color: black;
  transition: 0.3s;
}

// .home-title__image{
  // padding-top: 250px;
// }

// FEATURED

.top-products{
  padding: 20px 10%;
  padding-top: 50px;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

.top-products__title{
  font-size: 1.5rem;
  font-weight: 900;
  padding: 15px 0;
}

.top-products-container{
  display: flex;
  justify-content: space-around;
  gap: 100px;
  align-items: end;

  @media (max-width: 768px) {
    flex-direction: column;
    padding: 20px 20px 40px 20px;
    gap: 20px; 
    align-items: center;
  }
}


.top-products-container__item{
  // position: relative;
  display: flex;
  flex-direction: column;
  text-decoration: none;
  color: black;
}

.product-image{
  display: flex;
  align-items: center;
  justify-content: center;
}

.product-image > img{
  width: 230px;
}


.product-details{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.product-title{
  font-size: 1rem!important;
  font-weight: 300!important;
  margin-bottom: 0.3rem;
  text-align: center;
  width: 13rem;

  @media (max-width: 1280px) {
    width: 10rem;
  }
}

.product-price{
  font-size: 0.8rem!important;
  font-weight: 500;
  margin-bottom: 0.3rem;
  text-align: center;
}

.product-off{
  right: 0;
  top: 0;
  background-color: black;
  color: white;
  padding: 5px 10px;
  font-size: 0.81rem;
  font-weight: 800; 
  text-align: center;
}

// CATEGORIES
.categories{
  font-family: 'Helvetica Neue', sans-serif;
  padding: 20px 10%;

  @media (max-width: 1280px) {
    padding: 20px 5%;
  }
}

.categories-additionals{
  display: flex;
  justify-content: space-between;
  gap: 50px;
  padding: 10px 0;
  @media (max-width: 1280px) {
    flex-direction: column;    
    gap:20px
  }
}

.categories-additionals__button{
  flex-grow: 1;
  padding: 20px 40px;
  // border-radius: 35px;
  border: none;
  margin: 0;
  font-size:3rem; 
  color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  transition: 0.3s;
  filter: grayscale(100%);
  text-align: center;
  text-decoration: none;
  @media (max-width: 1280px) {
    font-size: 1.5rem;
    padding: 40px 40px;
  }
}

.categories-additionals__button:hover{
  color: rgba(255, 255, 255, 1);
  transition: 0.3s;
  filter: grayscale(0%);
}

.categories-additionals__button--ofertas{
  background: url(../assets/OFERTAS_BUTTON_HOME.png) no-repeat center;
  background-size: cover;

}

.categories-additionals__button--packs{
  background: url(../assets/PACKS_BUTTON_HOME.png) no-repeat center;
  background-size: cover;
}

.categories-generals{
  display: flex;
  justify-content: space-between;
  gap: 30px;

  padding: 10px 0;
  @media (max-width: 1280px) {
    flex-direction: column;    
    gap:20px
  }
}

.categories-generals__button{
  flex-grow: 1;
  padding: 251px 20px;
  border: none;
  margin: 0;
  font-size:3rem; 
  color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  transition: 0.2s;
  text-align: center;
  text-decoration: none;
  filter: grayscale(100%);

  @media (max-width: 1280px) {
    padding: 60px 40px;
    font-size: 1.5rem;
  }

}

.categories-generals__button:hover{
  color: rgba(255, 255, 255, 1);
  transition: 0.2s;
  filter: grayscale(0%);
}

.categories-generals__button--headphones{
  background: url(../assets/HP_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
  @media (max-width: 1280px) {
    background-position-y: -130px;
  }
}

.categories-generals__button--tw{
  background: url(../assets/TW_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
  @media (max-width: 1280px) {
    background-position-y: -50px;
  }
}


.categories-generals__button--bluetooth{
  background: url(../assets/BT_CATEGORY_CUT.jpg) no-repeat center;
  background-size: cover;
}
/* ... */

